[project]
name = "gaia-agent"
version = "0.1.0"
description = "An AI agent built to be evaluated on the gaia benchmark"
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.33.0",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-tavily>=0.2.3",
    "langgraph>=0.4.8",
    "openpyxl>=3.1.5",
    "pydantic>=2.11.7",
    "python-docx>=1.2.0",
]
